--- a/src/index.css
+++ b/src/index.css
@@ -72,7 +72,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 2rem;
+    padding: 0;
 }
 
 /* Overlay Panel */
