--- a/src/styles/ProjectModal.css
+++ b/src/styles/ProjectModal.css
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     z-index: 100;
-    padding: 2rem;
+    padding: 0;
 }
 
 /* Modal Container - Matching index.css .overlay-panel */
