--- a/src/styles/WhyDeveloperSection.css
+++ b/src/styles/WhyDeveloperSection.css
@@ -43,7 +43,8 @@
   align-items: center;
   backface-visibility: hidden;
   transform-origin: left;
-  transition: transform 0.8s cubic-bezier(0.23, 1, 0.32, 1);
+  transition: transform 3.3s cubic-bezier(0.23, 1, 0.32, 1),
+    width 3.3s cubic-bezier(0.23, 1, 0.32, 1);
   z-index: 10;
   box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(10px);
@@ -66,7 +67,7 @@
 }
 
 .question-mark {
-  font-size: 5rem;
+  font-size: 2rem;
   color: var(--accent-color);
   text-shadow: 0 0 20px var(--accent-color);
   font-weight: bold;
